# Digital-Kiosk

./: Makefile  README.md  compose.yaml
services/api/: Dockerfile  alembic.ini  pyproject.toml  test.db
services/api/alembic/: env.py
services/api/src/: app.py  database.py  http.py
services/api/src/services/: whatsapp.py
services/api/tests/: conftest.py
services/frontend/: Dockerfile  package-lock.json  package.json
services/frontend/src/app/: globals.css  layout.tsx  page.tsx
services/frontend/src/components/: ServiceDetail.tsx  ServiceGrid.tsx  WelcomeScreen.tsx
services/frontend/src/components/ui/: button.tsx  card.tsx
services/frontend/src/data/: services.ts
services/frontend/src/types/: index.ts
