[project]
name = "api"
version = "1.0.0"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "~3.13"
[tool.poetry.group.main.dependencies]
aiosqlite = "0.21.0"
alembic = "1.16.4"
asyncmock = "0.4.2"
backoff = "2.2.1"
fastapi = "0.116.1"
httpx = "0.28.1"
openai = "1.82.1"
pydantic = "^2.7.1"
pytest = "8.4.1"
pytest-asyncio = "1.1.0"
pytest-mock = "3.14.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
sentry-sdk = {extras = ["asyncio", "fastapi", "httpx", "sqlalchemy"], version = "^2.2.0"}
sorcery = "0.2.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
uvicorn = "0.35.0"


[tool.poetry.group.dev.dependencies]
IPython = "9.2.0"
# LSP
pylsp-mypy = ">=0.7.0"
python-lsp-ruff = ">=2.2.2"
python-lsp-server = ">=1.12.2"

[tool.ruff]
indent-width = 4
line-length = 88
target-version = "py311"
